# vehicle_simulator

./: .gitignore  Cargo.toml  README.md  build_agv_plc.bat  build_agv_vda050.bat  build_agv_vda5050.bat  run.bat
.cursor/rules/: language-zh.mdc
agv_plc/: Cargo.toml  README.md  build.rs  config.toml
agv_plc/proto/: AgvMsgProtocol.proto
agv_plc/src/: config.rs  lib.rs  log.rs  main.rs  map.rs  navigation.rs  plc.rs  socket.rs  vehicle_simulator.rs
agv_plc/src/log/: logging.rs
agv_plc/src/plc/: plc_engine.rs
agv_plc/src/plc/plc_engine/: encode.rs  estop.rs  new_task.rs  operation.rs  plc_io.rs  route.rs  segment.rs  status_uplink.rs
agv_plc/src/socket/: framing.rs  tcp_client.rs
agv_plc/tests/: map_parse_test.rs
agv_vda050/: Cargo.toml  README.md  config.toml
agv_vda050/src/: config.rs  lib.rs  logging.rs  main.rs  mqtt_handler.rs  mqtt_utils.rs  speed_limits.rs  vehicle_simulator.rs
agv_vda050/src/protocol/vda_2_0_0/: vda5050_2_0_0_connection.rs
agv_vda050/tests/: vehicle_simulator_tests.rs
agv_vda5050/: Cargo.toml  README.md  config.toml
agv_vda5050/docs/: map-driven-motion-design.md  vda5050-state-publish-design.md
agv_vda5050/maps/: README.md  youle-final-4.xml
agv_vda5050/src/: config.rs  main.rs  navigation.rs  protocol.rs  speed_limits.rs  utils.rs  vehicle_simulator.rs
agv_vda5050/src/protocol/: vda5050_common.rs  vda_2_0_0.rs
agv_vda5050/src/protocol/vda_2_0_0/: vda5050_2_0_0_action.rs  vda5050_2_0_0_instant_actions.rs  vda5050_2_0_0_order.rs  vda5050_2_0_0_state.rs  vda5050_2_0_0_visualization.rs
agv_vda5050/tests/: map_parse_test.rs  vehicle_simulator_tests.rs
sim_shared/: Cargo.toml
sim_shared/src/: common.rs  lib.rs  logging.rs  map.rs  navigation.rs  size_rotating.rs
