[package]
name = "agv_vda050"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
config-file = "0.2.3"
serde = { version = "1.0.104", features = ["derive"] }
tokio = { version = "1.12.0", features = ["full"] } # for our async runtime
paho-mqtt = { version = "0.14", default-features = false, features = ["bundled"] }
serde_json = "1.0.121"
uuid = { version = "1.10.0", features = ["v4"]}
futures-util = "0.3.30"
chrono = "0.4.38"
serde_with = "3.9.0"
rand = "0.8.5"
quick-xml = "0.37"
thiserror = "2.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt", "std"] }
tracing-appender = "0.2"
log = "0.4"
sim_shared = { path = "../sim_shared" }
